[package]
name = "tiamat"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_tiamat"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
itertools = ">=0.10"

[dependencies.pyo3]
version = ">=0.17"
features = ["extension-module"]

[dependencies.numpy]
version = ">=0.17"

[dependencies.ndarray]
version = ">=0.15"
features = ["rayon"]