[package]
name = "tiamat"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_tiamat"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
itertools = ">=0.10"
num-complex = ">=0.4"
rayon = ">=1.6"
num-traits = ">=0.2"

[dependencies.py_entropy]
version = ">=0.1"
git = "http://github.com/Renmusxd/RandomUnitaryLayers"

[dependencies.pyo3]
version = ">=0.17"
features = ["extension-module"]

[dependencies.numpy]
version = ">=0.17"

[dependencies.ndarray]
version = ">=0.15"
features = ["rayon"]

[dependencies.ndarray-linalg]
version = ">=0.16"
features = ["openblas-system"]

[dependencies.rand]
version = ">=0.8"
features = ["small_rng"]